Refactor authorship test models and update Kafka configuration for improved event handling